# aggregate_parser

./: README.md  pyproject.toml
aggregrate_parser/: __init__.py  gitmodules.py  submodule.py
